--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,18 +1,23 @@
-.button-add{
+.addTaskButton{
     color: #280303;
     background-color: #ee8fe6;
     border-color: #d568c5;
-    border-radius: 2rem;
+    border-radius: 1rem;
 
 }
 
-.section{
+.container{
     justify-content: center;
-    display: grid;
+    display: flex;
+    gap: 5px;
 }
 
 .header{
-
     justify-content: center;
     display: grid;
+}
+.done{
+    font-style: italic;
+    text-decoration: line-through;
+    text-decoration-color: chartreuse;
 }
